# reportlab-qr-code

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/workflows/: build.yaml  python-package.yml
reportlab_qr_code/: CHANGELOG.md  __init__.py  __main__.py
rml_qrcode/: __init__.py
sample_usage/: Makefile  test.py  test.rml  utils.py
tests/: test_qrcode.py
